Update Perl and BioPerl versions in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: perl
 
 perl:
+  - '5.26'
   - '5.14'
-  - '5.12'
   - '5.10'
 
 env:
@@ -18,7 +18,7 @@ addons:
 
 before_install:
   - git clone --branch master --depth 1 https://github.com/Ensembl/ensembl.git
-  - git clone -b bioperl-release-1-6-1 --depth 1 https://github.com/bioperl/bioperl-live.git
+  - git clone -b release-1-6-924 --depth 1 https://github.com/bioperl/bioperl-live.git
 
 install:
   - perl Makefile.PL
